add paramterized test for generic record